SCAP2022-262: Team Management short-circuit (#240)
* Added Short-circuit to render team list to redirect to member list if user only has one team and can't manage teams.

* Condensed method using available methods